--- a/webpage/_layouts/inner_no_margin.html
+++ b/webpage/_layouts/inner_no_margin.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/style_inner_no_margin.css?v=" | append: site.github.build_revision | relative_url }}">
+
+    <!-- MathJax for LaTeX-style math -->
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async
+      src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+    </script>
+
     {% include head-custom.html %}
   </head>
   <body>
@@ -18,8 +25,8 @@
   </body>
   <style>
     .wrapper {
-    max-width: {{ page.width_variable | default: "100%" }}; 
-    margin: {{ page.margin_variable | default: "0 auto" }};
+      max-width: {{ page.width_variable | default: "100%" }}; 
+      margin: {{ page.margin_variable | default: "0 auto" }};
     }
   </style>
 </html>
